--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,19 +1,32 @@
 <div class="row">
     <div class="col-4"></div>
-    <div class="col-4 bg-light mt-5 text-center py-5 shadow ">
-        <img width="25%" height="20%" src="../../assets/images/logo.jpeg" alt="">
+    <div class="col-4 bg-light mt-5 text-center p-5 shadow">
+        <img width="25%" height="20%" src="assets\images\logo.jpeg" alt="">
+        <!-- "../../assets/images/bank.png" -->
         <h4 class="text-info">My Bank</h4>
-        <input id="loginacnt" class="mt-3 rounded-4 p-1 border border-1 border-dark" type="text" placeholder="account num">
+        <!-- <h6>{{aim}}</h6> -->
+        <!-- <input (change)="acnoChange($event)" id="acnt" class="mt-3 rounded-4 p-1 border border-1 border-dark " type="text" [placeholder]="account">
         <br>
-        <input id="loginpswrd" class="mt-3 rounded-4 p-1 border border-1 border-dark" type="text" placeholder="password">
+        <input (change)="pswdChange($event)" id="username" class="mt-3 rounded-4 p-1 border border-1 border-dark" type="text" placeholder="name"> -->
+       <!-- <br>
+       <input #acnt id="acnt" class="mt-3 rounded-4 p-1 border border-1 border-dark " type="text" [placeholder]="account">
+       <br>
+       <input #pswd  id="username" class="mt-3 rounded-4 p-1 border border-1 border-dark" type="text" placeholder="name">
+       <br> -->
+       <br>
+       <form [formGroup]="registerForm">
+        <input formControlName="acnt" id="acnt" class="mt-3 rounded-4 p-1 border border-1 border-dark " type="text" placeholder="enter account ">
+       <br>
+       <input formControlName="name" id="username" class="mt-3 rounded-4 p-1 border border-1 border-dark" type="text" placeholder="name">
+       <br>
+        <input formControlName="pswd" id="paswrd" class="mt-3 rounded-4 p-1 border border-1 border-dark" type="text" placeholder="password">
         <br>
-        <button onclick="login()" class="px-5 rounded-pill mt-3 btn btn-outline-info ">Login</button>
-        <br>
-        <div class=" mt-2 d-flex justify-content-center">
-            <a style="font-size: 14px;" class="text-decoration-none text-info" href="">Forgot password? </a>
-
-            <a style="font-size: 14px;" class=" text-decoration-none ms-1 text-info ms-3" href="index.html">Register</a>
+        <button type="button" (click)="register()" class="px-5 rounded-pill mt-3 btn btn-outline-info ">Register</button>
+        <div class="d-flex justify-content-center">
+            <p style="font-size: 14px;">Already have an account? </p>
+            <a style="font-size: 14px;" class="text-decoration-none ms-1 text-info" routerLink="">Login</a>
         </div>
+       </form>
 
     </div>
     <div class="col-4"></div>
