--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,38 +1,63 @@
 <div class="row">
     <h2>welcome {{user}}</h2>
     <a routerLink="/transaction">Transaction History</a>
+    <h4>{{currentDate | date:'short'}}</h4>
+    <app-delete (onCancel)="onCancel()" [item]="acno" (onDelete)="onDelete($event)"></app-delete>
+
     <div class="col-2"></div>
-    <div class="col-3 bg-light mt-5 text-center py-5 shadow w-25">
+    <div  [ngClass]="acno?'styl1':''" class="col-3 bg-light mt-5 text-center py-5 shadow w-25">
         <img width="25%" height="20%" src="../../assets/images/logo.jpeg" alt="">
         <h4 class="text-info">Withdrawel</h4>
-        <input [(ngModel)]="withaccount" id="w-acnt" class="mt-3 rounded-4 p-1 border border-1 border-dark" type="text"
-            placeholder="account num">
-        <br>
-        <input [(ngModel)]="withdpswd" id="w-pswd" class="mt-3 rounded-4 p-1 border border-1 border-dark" type="text"
-            placeholder="password">
-        <br>
-        <input [(ngModel)]="withdamount" id="w-amount" class="mt-3 rounded-4 p-1 border border-1 border-dark" type="text"
-            placeholder="amount">
-        <button (click)="withdrawel()" class="px-5 rounded-pill mt-3 btn btn-outline-info ">Withdrawel</button>
+        <form [formGroup]="withdrawForm" action="">
+            <input formControlName="withaccount" id="w-acnt" class="mt-3 rounded-4 p-1 border border-1 border-dark"
+                type="text" placeholder="account num">
+            <div *ngIf="this.withdrawForm.get('withaccount')?.errors && this.withdrawForm.get('withaccount')?.touched"
+                class="text-danger">Invalid Account Number</div>
+            <br>
+            <input formControlName="withdpswd" id="w-pswd" class="mt-3 rounded-4 p-1 border border-1 border-dark"
+                type="text" placeholder="password">
+            <div *ngIf="this.withdrawForm.get('withdpswd')?.errors && this.withdrawForm.get('withdpswd')?.touched"
+                class="text-danger">Invalid passwrd</div>
+            <br>
+            <input formControlName="withdamount" id="w-amount" class="mt-3 rounded-4 p-1 border border-1 border-dark"
+                type="text" placeholder="amount">
+            <div *ngIf="this.withdrawForm.get('withdamount')?.errors && this.withdrawForm.get('withdamount')?.touched"
+                class="text-danger">Invalid Amount</div>
+            <button (click)="withdrawel()" class="px-5 rounded-pill mt-3 btn btn-outline-info ">Withdrawel</button>
+        </form>
         <br>
     </div>
     <div class="col-2"></div>
-    <div class="col-6 bg-light mt-5 text-center py-5 shadow w-25">
+    <div [ngClass]="acno?'styl1':''" class="col-6 bg-light mt-5 text-center py-5 shadow w-25">
         <img width="25%" height="20%" src="../../assets/images/logo.jpeg" alt="">
         <h4 class="text-info">Deposite</h4>
-        <input [(ngModel)]="depacnt" id="d-acnt" class="mt-3 rounded-4 p-1 border border-1 border-dark" type="text"
-            placeholder="account num">
-        <br>
-        <input [(ngModel)]="deppswd" id="d-pswd" class="mt-3 rounded-4 p-1 border border-1 border-dark" type="text"
-            placeholder="password">
-        <br>
-        <input [(ngModel)]="depamount" id="d-amount" class="mt-3 rounded-4 p-1 border border-1 border-dark" type="text"
-            placeholder="amount">
+        <form [formGroup]="depoForm" action="">
+            <input formControlName="depacnt" id="d-acnt" class="mt-3 rounded-4 p-1 border border-1 border-dark"
+                type="text" placeholder="account num">
+            <div *ngIf="this.depoForm.get('depacnt')?.errors && this.depoForm.get('depacnt')?.touched"
+                class="text-danger">Invalid account</div>
             <br>
-        <button (click)="deposite()" class="px-5 rounded-pill mt-3 btn btn-outline-info ">Deposite</button>
+            <input formControlName="deppswd" id="d-pswd" class="mt-3 rounded-4 p-1 border border-1 border-dark"
+                type="text" placeholder="password">
+            <div *ngIf="this.depoForm.get('deppswd')?.errors && this.depoForm.get('deppswd')?.touched"
+                class="text-danger">Invalid pswrd</div>
+            <br>
+            <input formControlName="depamount" id="d-amount" class="mt-3 rounded-4 p-1 border border-1 border-dark"
+                type="text" placeholder="amount">
+            <div *ngIf="this.depoForm.get('depamount')?.errors && this.depoForm.get('depamount')?.touched"
+                class="text-danger">Invalid Amount</div>
+            <br>
+            <button (click)="deposite()" class="px-5 rounded-pill mt-3 btn btn-outline-info ">Deposite</button>
+        </form>
         <br>
 
     </div>
-    <div class="col-2"></div>
+    <div class="col-2 ">
+        <div class="d-flex justify-content-end me-3">
+
+            <button (click)="delete()" class="btn btn-outline-danger mx-2 ">Delete</button>
+            <button (click)="logout()" class="btn btn-outline-warning ">Logout</button>
+        </div>
+    </div>
 
 </div>
