--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,13 +2,17 @@
 <div class="row">
     <div class="col-4"></div>
     <div class="col-4 bg-light mt-5 text-center py-5 shadow ">
-        <img width="25%" height="20%" src="../../assets/images/logo.jpeg" alt="">
+        <img width="25%" height="20%" src="" alt="">
         <h4 class="text-info">My Bank</h4>
-        <input [(ngModel)]="acnt" id="loginacnt" class="mt-3 rounded-4 p-1 border border-1 border-dark" type="text" placeholder="account num">
+       <form [formGroup]="loginForm" action="">
+        <input formControlName="acnt"  id="loginacnt" class="mt-3 rounded-4 p-1 border border-1 border-dark" type="text" placeholder="account num">
+        <div *ngIf="this.loginForm.get('acnt')?.errors && this.loginForm.get('acnt')?.touched" class="text-danger">Invalid Account Number</div>
         <br>
-        <input [(ngModel)]="pswd" id="loginpswrd" class="mt-3 rounded-4 p-1 border border-1 border-dark" type="text" placeholder="password">
+        <input formControlName="pswd" id="loginpswrd" class="mt-3 rounded-4 p-1 border border-1 border-dark" type="text" placeholder="password">
+        <div *ngIf="this.loginForm.get('pswd')?.errors && this.loginForm.get('pswd')?.touched" class="text-danger">Invalid Password</div>
         <br>
         <button (click)="login()" class="px-5 rounded-pill mt-3 btn btn-outline-info ">Login</button>
+       </form>
         <br>
         <div class=" mt-2 d-flex justify-content-center">
             <a style="font-size: 14px;" class="text-decoration-none text-info" href="">Forgot password? </a>
