--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -16,10 +16,13 @@
        <br>
        <form [formGroup]="registerForm">
         <input formControlName="acnt" id="acnt" class="mt-3 rounded-4 p-1 border border-1 border-dark " type="text" placeholder="enter account ">
-       <br>
+        <div *ngIf="this.registerForm.get('acnt')?.errors && this.registerForm.get('acnt')?.touched" class="text-danger">Invalid accountnumber</div>
+        <br>
        <input formControlName="name" id="username" class="mt-3 rounded-4 p-1 border border-1 border-dark" type="text" placeholder="name">
+       <div *ngIf="this.registerForm.get('name')?.errors && this.registerForm.get('name')?.touched" class="text-danger">Invalid username</div>
        <br>
         <input formControlName="pswd" id="paswrd" class="mt-3 rounded-4 p-1 border border-1 border-dark" type="text" placeholder="password">
+        <div *ngIf="this.registerForm.get('pswd')?.errors && this.registerForm.get('pswd')?.touched" class="text-danger">Invalid password</div>
         <br>
         <button type="button" (click)="register()" class="px-5 rounded-pill mt-3 btn btn-outline-info ">Register</button>
         <div class="d-flex justify-content-center">
