--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background-image: url('https://i.postimg.cc/5yJkpMTY/download.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
